dropdown is not the default value for our Dropdown plugin, we should now specify which one we want (dropdown, dropup, dropleft, dropright)

--- a/js/tests/visual/dropdown.html
+++ b/js/tests/visual/dropdown.html
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="btn-group">
+          <div class="btn-group dropdown">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               This dropdown's menu is right-aligned
             </button>
